<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menuTextEditing"
        android:orderInCategory="100"
        android:title="@string/menuTextEditing" />
    <item
        android:id="@+id/menuTranspose"
        android:orderInCategory="101"
        android:title="@string/menuTranspose" />
    <item
        android:id="@+id/menuShareMelody"
        android:orderInCategory="102"
        android:title="@string/menuShareMelody" />
    <item
        android:id="@+id/menuHelp"
        android:orderInCategory="103"
        android:title="@string/menuHelp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuAbout"
        android:orderInCategory="104"
        android:title="@string/menuAbout"
        app:showAsAction="never" />
</menu>